Fixed some layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,10 @@
   font-family: 'Poppins', sans-serif;
 }
 
+body{
+  height: 100%;
+}
+
 .App{
   background-image: url(/src/assets/images/background.png);
   background-size: cover;
@@ -15,4 +19,11 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  padding-top: 50px;
+}
+
+@media screen and (max-height: 576px) {
+  .App{
+    overflow: scroll;
+  }
 }
